[#163185467] add the edit record platform for a user to edit record uploaded

--- a/UI/edit-report.html
+++ b/UI/edit-report.html
@@ -48,8 +48,7 @@
                 <label for="attachment">Update media</label>
                 <input type="file" accept="image/*, video/mp4" id="attachment"
                     name="attachment" class="form-element" />
-                <button type="submit" id="record" class="btn update">Update
-                    Record</button>
+                <button type="submit" id="record" class="btn update">Update Record</button>
                 <div class="message-box"></div>
             </form>
         </section>
